objects/OF_CodificaProfiloListini__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CD_ListinoCanoneName__c</fullName>
        <label>CD ListinoCanoneName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CosType__c</fullName>
        <label>CosType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPortalValid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serve per distinguere i valori validi da Portal e Non</description>
        <label>IsPortalValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_ListinoCanoneName__c</fullName>
        <label>Listino Canone name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ProfiloCommerciale__c</fullName>
        <label>Profilo Commerciale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Profilolistino__c</fullName>
        <label>Profilo listino</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_CD_Profilo_Commerciale__c</fullName>
        <label>PO CD Profilo Commerciale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PREPROV_ListinoCanoneName__c</fullName>
        <label>Listino Canone PreProvisioning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>servizio__c</fullName>
        <label>servizio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Codifica Profilo Listini</label>
    <listViews>
        <fullName>P2P_Attiva</fullName>
        <columns>NAME</columns>
        <columns>servizio__c</columns>
        <columns>OF_ListinoCanoneName__c</columns>
        <columns>OF_ProfiloCommerciale__c</columns>
        <columns>OF_Profilolistino__c</columns>
        <columns>CosType__c</columns>
        <columns>IsPortalValid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>servizio__c</field>
            <operation>equals</operation>
            <value>P2P Attiva</value>
        </filters>
        <label>P2P Attiva</label>
        <language>en_US</language>
    </listViews>
</CustomObject>